# VibeJSON

./: CMakeLists.txt  README.md  SERIALIZATION_README.md  example_cube.json
game/: CMakeLists.txt
game/include/: Camera.hpp  ComponentArray.hpp  Cube.hpp  EntityManager.hpp  Gizmo.hpp  ImguiLayer.hpp  Transform.hpp  Types.hpp  Utils.hpp  dpi_config.h
game/src/: Cube.cpp  Gizmo.cpp  main.cpp  serialization_example.cpp
